sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i=0
  var len=getValueCount()
  while(i<=len-1){
    if (isSmaller(i+1,i)){
      swap(i,i+1)
      i=i-1
    }
    else i=i+1
    
    if (i==-1){
      i=0
    }
  }
}